// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer: articleDetail handles LOAD 1`] = `
Immutable.Map {
  "article": Immutable.Map {
    "replyRequestCount": 1,
    "user": null,
    "text": "請問這偏文章是正確嗎？",
    "id": "AV9mEFX2yCdS-nWhuiPu",
    "createdAt": "2017-10-29T02:57:47.509Z",
  },
  "replyConnections": Immutable.List [
    Immutable.Map {
      "id": "article1-reply1",
      "canUpdateStatus": true,
      "status": "NORMAL",
      "reply": Immutable.Map {
        "id": "reply1",
        "versions": Immutable.List [
          Immutable.Map {
            "type": "NOT_ARTICLE",
            "text": "文字長度太短，疑似為使用者手動輸入之查詢語句，不像轉傳文章。",
          },
        ],
      },
      "feedbacks": Immutable.List [],
      "user": Immutable.Map {
        "id": "AVqVwjqQyrDaTqlmmp_a",
        "name": null,
        "avatarUrl": null,
      },
      "createdAt": "2017-10-29T03:19:56.782Z",
    },
  ],
  "relatedArticles": Immutable.List [
    Immutable.Map {
      "id": "article1",
      "replyConnections": Immutable.List [
        Immutable.Map {
          "id": "article1-relatedReply1",
          "canUpdateStatus": false,
          "reply": Immutable.Map {
            "id": "relatedReply1",
            "versions": Immutable.List [
              Immutable.Map {
                "type": "RUMOR",
                "text": "醫師聽聞後都斥為無稽之談",
              },
            ],
          },
        },
        Immutable.Map {
          "id": "article1-relatedReply2",
          "canUpdateStatus": false,
          "reply": Immutable.Map {
            "id": "relatedReply2",
            "versions": Immutable.List [
              Immutable.Map {
                "type": "RUMOR",
                "text": "喝冰水跟罹癌根本是兩回事",
              },
            ],
          },
        },
        Immutable.Map {
          "id": "article1-reply1",
          "canUpdateStatus": false,
          "reply": Immutable.Map {
            "id": "reply1",
            "versions": Immutable.List [
              Immutable.Map {
                "type": "NOT_ARTICLE",
                "text": "文字長度太短，疑似為使用者手動輸入之查詢語句，不像轉傳文章。",
              },
            ],
          },
        },
      ],
    },
    Immutable.Map {
      "id": "article2",
      "text": "~~黎建南給退休軍公教人員的一封公開信~~",
      "replyConnections": Immutable.List [
        Immutable.Map {
          "id": "article2-relatedReply1",
          "canUpdateStatus": false,
          "reply": Immutable.Map {
            "id": "relatedReply1",
            "versions": Immutable.List [
              Immutable.Map {
                "type": "RUMOR",
                "text": "醫師聽聞後都斥為無稽之談",
              },
            ],
          },
        },
      ],
    },
  ],
  "relatedReplies": Immutable.List [
    Immutable.Map {
      "id": "relatedReply1",
      "versions": Immutable.List [
        Immutable.Map {
          "type": "RUMOR",
          "text": "醫師聽聞後都斥為無稽之談",
        },
      ],
      "articleId": "article1",
    },
    Immutable.Map {
      "id": "relatedReply2",
      "versions": Immutable.List [
        Immutable.Map {
          "type": "RUMOR",
          "text": "喝冰水跟罹癌根本是兩回事",
        },
      ],
      "articleId": "article1",
    },
    Immutable.Map {
      "id": "relatedReply1",
      "versions": Immutable.List [
        Immutable.Map {
          "type": "RUMOR",
          "text": "醫師聽聞後都斥為無稽之談",
        },
      ],
      "articleId": "article2",
    },
  ],
}
`;

exports[`reducer: articleDetail handles LOAD_AUTH 1`] = `
Immutable.List [
  Immutable.Map {
    "id": "article1-reply1",
    "canUpdateStatus": true,
    "status": "NORMAL",
    "reply": Immutable.Map {
      "id": "reply1",
      "versions": Immutable.List [
        Immutable.Map {
          "type": "NOT_ARTICLE",
          "text": "文字長度太短，疑似為使用者手動輸入之查詢語句，不像轉傳文章。",
        },
      ],
    },
    "feedbacks": Immutable.List [],
    "user": Immutable.Map {
      "id": "AVqVwjqQyrDaTqlmmp_a",
      "name": null,
      "avatarUrl": null,
    },
    "createdAt": "2017-10-29T03:19:56.782Z",
  },
]
`;

exports[`reducer: articleDetail handles SET_STATE 1`] = `
Immutable.Map {
  "isLoading": true,
  "isAuthLoading": false,
  "isReplyLoading": false,
}
`;

exports[`reducer: articleDetail handles partial LOAD 1`] = `
Immutable.Map {
  "article": Immutable.Map {
    "replyRequestCount": 1,
    "user": null,
    "text": "請問這偏文章是正確嗎？",
    "id": "AV9mEFX2yCdS-nWhuiPu",
    "createdAt": "2017-10-29T02:57:47.509Z",
  },
  "replyConnections": Immutable.List [
    Immutable.Map {
      "id": "reply1",
      "canUpdateStatus": true,
      "status": "NORMAL",
      "reply": Immutable.Map {
        "id": "AV9mN3dDyCdS-nWhuiP3",
        "versions": Immutable.List [
          Immutable.Map {
            "user": Immutable.Map {
              "id": "AVqVwjqQyrDaTqlmmp_a",
              "name": null,
              "avatarUrl": null,
            },
            "type": "NOT_ARTICLE",
            "text": "文字長度太短，疑似為使用者手動輸入之查詢語句，不像轉傳文章。",
            "reference": "",
            "createdAt": "2017-10-29T03:40:31.938Z",
          },
        ],
      },
      "feedbacks": Immutable.List [],
      "user": Immutable.Map {
        "id": "AVqVwjqQyrDaTqlmmp_a",
        "name": null,
        "avatarUrl": null,
      },
      "createdAt": "2017-10-29T03:40:31.942Z",
    },
    Immutable.Map {
      "id": "reply2",
      "canUpdateStatus": true,
      "status": "NORMAL",
      "reply": Immutable.Map {
        "id": "AV9mJJ5qyCdS-nWhuiPz",
        "versions": Immutable.List [
          Immutable.Map {
            "user": Immutable.Map {
              "id": "AVqVwjqQyrDaTqlmmp_a",
              "name": null,
              "avatarUrl": null,
            },
            "type": "NOT_ARTICLE",
            "text": "文字長度太短，疑似為使用者手動輸入之查詢語句，不像轉傳文章。",
            "reference": "",
            "createdAt": "2017-10-29T03:19:56.776Z",
          },
        ],
      },
      "feedbacks": Immutable.List [],
      "user": Immutable.Map {
        "id": "AVqVwjqQyrDaTqlmmp_a",
        "name": null,
        "avatarUrl": null,
      },
      "createdAt": "2017-10-29T03:19:56.782Z",
    },
  ],
  "relatedArticles": Immutable.List [
    Immutable.Map {
      "id": "article1",
      "replyConnections": Immutable.List [
        Immutable.Map {
          "id": "article1-relatedReply1",
          "canUpdateStatus": false,
          "reply": Immutable.Map {
            "id": "relatedReply1",
            "versions": Immutable.List [
              Immutable.Map {
                "type": "RUMOR",
                "text": "醫師聽聞後都斥為無稽之談",
              },
            ],
          },
        },
        Immutable.Map {
          "id": "article1-relatedReply2",
          "canUpdateStatus": false,
          "reply": Immutable.Map {
            "id": "relatedReply2",
            "versions": Immutable.List [
              Immutable.Map {
                "type": "RUMOR",
                "text": "喝冰水跟罹癌根本是兩回事",
              },
            ],
          },
        },
        Immutable.Map {
          "id": "article1-reply1",
          "canUpdateStatus": false,
          "reply": Immutable.Map {
            "id": "reply1",
            "versions": Immutable.List [
              Immutable.Map {
                "type": "NOT_ARTICLE",
                "text": "文字長度太短，疑似為使用者手動輸入之查詢語句，不像轉傳文章。",
              },
            ],
          },
        },
      ],
    },
    Immutable.Map {
      "id": "article2",
      "text": "~~黎建南給退休軍公教人員的一封公開信~~",
      "replyConnections": Immutable.List [
        Immutable.Map {
          "id": "article2-relatedReply1",
          "canUpdateStatus": false,
          "reply": Immutable.Map {
            "id": "relatedReply1",
            "versions": Immutable.List [
              Immutable.Map {
                "type": "RUMOR",
                "text": "醫師聽聞後都斥為無稽之談",
              },
            ],
          },
        },
      ],
    },
  ],
  "relatedReplies": Immutable.List [
    Immutable.Map {
      "id": "relatedReply1",
      "versions": Immutable.List [
        Immutable.Map {
          "type": "RUMOR",
          "text": "醫師聽聞後都斥為無稽之談",
        },
      ],
      "articleId": "article1",
    },
    Immutable.Map {
      "id": "relatedReply2",
      "versions": Immutable.List [
        Immutable.Map {
          "type": "RUMOR",
          "text": "喝冰水跟罹癌根本是兩回事",
        },
      ],
      "articleId": "article1",
    },
    Immutable.Map {
      "id": "relatedReply1",
      "versions": Immutable.List [
        Immutable.Map {
          "type": "RUMOR",
          "text": "醫師聽聞後都斥為無稽之談",
        },
      ],
      "articleId": "article2",
    },
  ],
}
`;
